# CLeVeR

./: .gitignore  clever.py  linear_probe.py  pyproject.toml
.claude/: CLAUDE.md  changes.md  settings.json
.claude/memory/: MEMORY.md  project_overview.md  thesis_improvements.md
.claude/plans/: thesis_defense_improvements.md
archives/: clever.py
dataset/: 7z  REASONING_ANALYSIS_CONTEXT.md  analyze_symmetry.py  augment_dataset.py  llm_enhance_reasons.py  rewrite_reasons.py  vcldata_augmented.7z
docs/: clever.md
scripts/: linear_probe_detect.sh  linear_probing.sh  preprocess.sh  pretrain.sh  pull_from_server.sh  push_to_server.sh  train.sh  zero_shot_detect.sh  zeroshot.sh
src/: class_def.py  cwe_names.json  data.py  data_preprocess.py  generate_example.py  linear_probing.py  model.py  pretrain.py  zeroshot.py
