[project]
name = "clever"
version = "0.1.0"
description = "Multi-modal Contrastive Learning for Vulnerability Code Representation (ACL 2025 Findings)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.0",
    "numpy>=2.0.0",
]

[tool.pylance]
python.analysis.extraPaths = ["src"]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
index-strategy = "unsafe-best-match"
